# coesi-cli

./: .gitignore  LICENSE  PUBLISHING.md  README.md  dev_setup.py  publish.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
examples/: README.md
src/: __init__.py  cli.py  utils.py
tests/: __init__.py  test_cli.py  test_utils.py
